Feat: Preliminary version of refactored build of issue #6